--- a/styles/BR-Custom.css
+++ b/styles/BR-Custom.css
@@ -1,6 +1,6 @@
 .logo-image .logo img {
   position: relative;
-  margin-top: -70px;
+  margin-top: -60px;
   left: -35%;
 }
 
@@ -17,193 +17,34 @@
 }
 
 .page-collection {
-  padding-top: 20px;
+  padding-top: 40px;
 }
 
+//New Tyler Code//
 #canvas {
-  margin-top: -60px;
+  margin-top: -25px;
 }
 
 #wrapper {
-  /*background-image: url('http://static.squarespace.com/static/524b2b1ae4b07530b6387da6/t/524c9124e4b05018590b5c1b/1380749604483/background.jpg');
-  background-repeat: repeat-x;
-  */
-  background-color: #fff;
+  background: linear-gradient(#eeeced 250px, #fff 250px);
 }
 
+//home edits//
 #collection-524b2c47e4b07530b638810f #wrapper {
   padding: 0;
 }
 
-// home width hack //
-#collection-524b2c47e4b07530b638810f p {
-  padding: 0px 28px;
+#block-07d976e675a613fb3e12 {
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
-/*
-.sqs-col-12 .sqs-col-4 {
-  margin-left: 20px;
-  margin-right: -40px;
-}
-*/
-
-#block-d5cabb82d5ddb6300828 {
-  margin-top: -6px;
-}
-
-#block-dcd7a282e1ee345be76b {
-  margin-top: -6px;
-}
-
-//BANNER OVERRIDE //
-#collection-524b3872e4b03626b6c18848 #wrapper {
-  background-image: url('http://static.squarespace.com/static/524b2b1ae4b07530b6387da6/t/52548802e4b09b5bd40935ba/1381271554105/background%202.jpg');
-}
-
-#collection-524b3872e4b03626b6c18859 #wrapper {
-  background-image: url('http://static.squarespace.com/static/524b2b1ae4b07530b6387da6/t/52548802e4b09b5bd40935ba/1381271554105/background%202.jpg');
-}
-
-#collection-524b388be4b03626b6c18f6b #wrapper {
-  background-image: url('http://static.squarespace.com/static/524b2b1ae4b07530b6387da6/t/52548802e4b09b5bd40935ba/1381271554105/background%202.jpg');
-}
-
-#collection-524b388ce4b03626b6c18f74 #wrapper {
-  background-image: url('http://static.squarespace.com/static/524b2b1ae4b07530b6387da6/t/52548802e4b09b5bd40935ba/1381271554105/background%202.jpg');
-}
-
-#collection-536bc84ce4b02a974e6886f1 #wrapper {
-  background-image: url('http://static.squarespace.com/static/524b2b1ae4b07530b6387da6/t/52548802e4b09b5bd40935ba/1381271554105/background%202.jpg');
-}
-
-//SIDEBAR HOVER //
-#block-d666f8f6e74e4f11d6cd {
-  position: fixed;
-}
-
-#block-c51d3b0e43ba0ff3f437 {
-  position: fixed;
-}
-
-#block-11212d1645f70bde3678 {
-  position: fixed;
-}
-
-#block-cb1980392366a1e017c4 {
-  position: fixed;
-}
-
-#block-01fc8ef25d2fd4990f94 {
-  position: fixed;
-}
-
-#block-d7423e3e62e87f948c37 {
-  position: fixed;
-}
-
-#block-b3cdd855d9a6b6da4bee {
-  position: fixed;
-}
-
-// OUR TEAM //
-#collection-524b388ce4b03626b6c18f7d #wrapper {
-  background-image: url('http://static.squarespace.com/static/524b2b1ae4b07530b6387da6/t/52549b97e4b0e53491ed022d/1381276567178/background3.jpg');
-}
-
-#collection-524b42f7e4b09b795faf41dc #wrapper {
-  padding: 0;
-  background-image: none;
-}
-
-#collection-524b42f7e4b09b795faf41dc h2 {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-#collection-524b42f7e4b09b795faf41dc h3 {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-#collection-524b42f7e4b09b795faf41dc .form-wrapper {
-  padding-left: 30px;
-  padding-right: 30px;
-}
-
-#block-4ac25c899c6044a7460d {
-  margin-bottom: -70px;
-}
-
-#block-9854a6197d47bdfe9545 {
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-#block-342958808fa9e6b6177b {
-  margin-bottom: -70px;
-}
-
-#block-6d4ad8abea724f02ccaf {
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-#block-311add94e3b6fe8bbadf {
-  margin-bottom: -50px;
-}
-
-#block-f06c624e67af1ef6dc99 {
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-@media screen and (max-width: 700px) {
-  .logo-image .logo img {
-    position: relative;
-    margin-top: -50px;
-    width: 250px;
-    margin-left: 40%;
-  }
-  #header #topNav {
-    margin-left: 280px;
-  }
-  h1 {
-    text-align: center;
-  }
-  h2 {
-    text-align: center;
-  }
-  h3 {
-    text-align: center;
-  }
-  p {
-    text-align: center;
-  }
-  .sqs-col-12 .sqs-col-4 {
-    margin-left: 10px;
-    margin-right: -20px;
-  }
-}
-
-//New Tyler Code//
-/*Fixed sidebar//
-#sidebar {
-  width: 228px !important;
-  position: fixed !important;
-  top: 384px !important;
-  right: 488px !important;
-}
-
-#sidebar .sqs-col-1 {
+#block-54513f316a8d99981c00 .sqs-block-content, #block-6d4ad8abea724f02ccaf .sqs-block-content, #block-f06c624e67af1ef6dc99 .sqs-block-content {
+  -webkit-box-shadow: 0px -3px 13px -4px rgba(0, 0, 0, 0.47);
+  -moz-box-shadow: 0px -3px 13px -4px rgba(0, 0, 0, 0.47);
+  box-shadow: 0px -3px 13px -4px rgba(0, 0, 0, 0.47);
   background-color: #fff;
-  -webkit-box-shadow: -3px 3px 7px 0px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: -3px 3px 7px 0px rgba(0, 0, 0, 0.1);
-  box-shadow: -3px 3px 7px 0px rgba(0, 0, 0, 0.1);
-}
-*/
-
-#wrapper {
-  background: linear-gradient(#eeeced 250px, #fff 250px);
+  padding: 20px;
 }
 
 body {
@@ -214,6 +55,12 @@ body {
   top: 300px !important;
 }
 
+#page-524b2c47e4b07530b638810f .sqs-layout>.sqs-row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+//idk//
 #page {
   padding-right: 12px;
   padding-top: 12px;
@@ -232,14 +79,14 @@ body {
   color: #eeeced !important;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 976px) {
   #logo {
     margin: 80px;
   }
 }
 
 //fix logo medium//
-@media only screen and (min-width: 700px) and (max-width:960px) {
+@media only screen and (min-width: 976px) and (max-width:960px) {
   .logo-image .logo img {
     left: -30%;
   }
