--- a/styles/BR-Custom.css
+++ b/styles/BR-Custom.css
@@ -1,3 +1,5 @@
+/*original custom css - Slightly edited, lol*/
+
 .logo-image .logo img {
   position: relative;
   margin-top: -60px;
@@ -20,7 +22,6 @@
   padding-top: 40px;
 }
 
-//New Tyler Code//
 #canvas {
   margin-top: -25px;
 }
@@ -30,7 +31,8 @@
   padding: 0;
 }
 
-//home edits//
+/*home edits*/
+
 #collection-524b2c47e4b07530b638810f #wrapper {
   padding: 0;
 }
@@ -61,19 +63,22 @@ body {
   margin-right: 0;
 }
 
-//fix paddings//
-#page {
+/*fix paddings*/
+
+#page, #Custom-Header {
   padding: 24px;
 }
 
-//HOMEPAGE STYLES (no sidebar)//
+/*HOMEPAGE STYLES (no sidebar)*/
+
 #collection-5b22a15703ce6433bbc61a82 {
   #page {
     margin: 0 !important;
   }
 }
 
-//Mobile Menu//
+/*Mobile Menu*/
+
 #mobileMenuLink {
   width: 65px !important;
   background-color: #3d6496 !important;
@@ -89,12 +94,32 @@ body {
 @media only screen and (max-width: 976px) {
   #logo {
     margin: 80px;
+    max-width: 350px;
+  }
+  /*fullwidth mobile slideshow*/
+  .sqs-gallery-block-slideshow {
+    max-width: 100vw;
+    margin-left: -50vw;
+    left: 50%;
+    padding-left: 0px;
+  }
+  #Custom-Header-collection-5b22a15703ce6433bbc61a82 {
+    margin-top: -65px;
+  }
+  #wrapper {
+    background-color: #fff;
+    background: #fff;
+  }
+  /*center sidebar content when at bottom*/
+  #block-yui_3_17_2_1_1528391381327_802 {
+    text-align: center;
   }
 }
 
-//fix logo medium//
-@media only screen and (min-width: 976px) and (max-width:960px) {
+/*fix logo medium*/
+
+@media only screen and (max-width:976px) {
   .logo-image .logo img {
-    left: -30%;
+    left: -20%;
   }
 }
