--- a/styles/BR-Custom.css
+++ b/styles/BR-Custom.css
@@ -56,6 +56,7 @@ body {
 
 #sidebar {
   top: 300px !important;
+  right: 0px !important;
 }
 
 #page-524b2c47e4b07530b638810f .sqs-layout>.sqs-row {
@@ -66,7 +67,7 @@ body {
 /*fix paddings*/
 
 #page, .sidebarPage-header {
-  padding: 24px;
+  padding: 32px;
 }
 
 /*HOMEPAGE STYLES (no sidebar)*/
