--- a/styles/BR-Custom.css
+++ b/styles/BR-Custom.css
@@ -112,6 +112,10 @@ body {
     background-color: #fff;
     background: #fff;
   }
+  #collection-524b42f7e4b09b795faf41dc #wrapper {
+    background-color: #fff;
+    background: #fff !important;
+  }
   /*center sidebar content when at bottom*/
   #block-yui_3_17_2_1_1528391381327_802 {
     text-align: center;
