No margin on contact header format

--- a/styles/BR-Custom.css
+++ b/styles/BR-Custom.css
@@ -73,7 +73,7 @@ body {
 
 /*HOMEPAGE STYLES (no sidebar)*/
 
-#collection-524b2c47e4b07530b638810f {
+#collection-524b2c47e4b07530b638810f, #collection-524b42f7e4b09b795faf41dc {
   #page {
     margin: 0 !important;
   }
